Overflow fixad till för stora bilder i imageViewer

--- a/5-pwd/JA.css/style.css
+++ b/5-pwd/JA.css/style.css
@@ -175,8 +175,12 @@
     background-color:rgb(230,230,230);
 }
 
+.imageContentDiv{
+    overflow:auto;
+}
+
 .iVContentDiv, .rssContentDiv, .memoryContentDiv{
-    overflow-y:scroll;
+    overflow-y:auto;
     overflow-x:hidden;
 }
 
